# grasch-lex

./: .gitignore  Makefile  README.md  README_functional_test.md  gql-graph-type-examples.md  pyproject.toml  requirements_test.txt  run_tests.sh  test_updated_element_hierarchy.py
.kiro/hooks/: auto-commit-all-changes.md  auto-commit-changes.kiro.hook  auto-commit-requirements.md  auto-commit-requirements.sh  auto-commit-specs.md  auto-commit-specs.sh  manual-commit-all.md
.kiro/settings/: hooks.json
.kiro/specs/property-graph-schema/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
ancillary docs/ISO-IEC JTC 1-SC 32-WG 3_39075_W29_2025-06-18/: Standard.dtd  features.xml  forewordBoilerplatePart1.xml  forewordBoilerplatePart2For39075.xml  gql-standard-conditions.xml  gql-standard-features.xml  gql-standard-implementation-defined.xml  gql-standard-implementation-dependent.xml  gql-standard.bnf.txt  gql-standard.bnf.xml  gql-standard.entities  gql-standard.xml  gql-standard_editor_notes.xml  normativeReferencesBoilerplate.xml  referencedDocuments.xml  winansi.entities
src/grasch/: __init__.py  catalog.py  constraints.py  core.py  kuzu_mock.py  types.py
tests/: test_functional.py  test_functional_simple.py
